--- a/client/supermarket-app/package.json
+++ b/client/supermarket-app/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@cloudinary/angular": "^1.0.0-beta.8",
+    "@cloudinary/url-gen": "^1.0.0-beta.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
