--- a/client/supermarket-app/package.json
+++ b/client/supermarket-app/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.1.0",
     "@cloudinary/angular": "^1.0.0-beta.8",
     "@cloudinary/url-gen": "^1.0.0-beta.5",
+    "@iplab/ngx-file-upload": "^3.3.1",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -31,6 +33,7 @@
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
