--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-jwt": "^6.0.0",
+    "file-system": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "uuid": "^8.3.2"
   }
 }
